# LCC-LogDemons

./: CMakeLists.txt  License.txt  README.md  README_Manual.txt  setup_linux.sh
cmake/: LogDemonsConfig.cmake.in  LogDemonsUse.cmake.in
src/: CMakeLists.txt
src/LCClogDemons/: CMakeLists.txt  PackageConfig.cmake.in  PackageName.cmake  itkLCCDeformableRegistrationFilter.txx  itkLCClogDemonsRegistrationFilter.h  itkLCClogDemonsRegistrationFilter.txx  itkLocalCriteriaOptimizer.h  itkLocalCriteriaOptimizer.txx  itkMultiResolutionLCCDeformableRegistration.h  itkMultiResolutionLCCDeformableRegistration.txx  itkSymmetricLCClogDemonsRegistrationFilter.h  itkSymmetricLCClogDemonsRegistrationFilter.txx  rpiLCClogDemons.cxx  rpiLCClogDemons.hxx  rpiLCClogDemonsExecutable.cxx
src/LogDemons/: CMakeLists.txt  itkBendingEnergyRegularizationFilter.h  itkBendingEnergyRegularizationFilter.txx  itkDemonsCommandIterationUpdate.h  itkDisplacementFieldCompositionFilter.h  itkDisplacementFieldCompositionFilter.hxx  itkDisplacementToVelocityFieldLogFilter.h  itkDisplacementToVelocityFieldLogFilter.hxx  itkExponentialDeformationFieldImageFilter2.txx  itkLogDomainDeformableRegistrationFilter.h  itkLogDomainDeformableRegistrationFilter.hxx  itkLogDomainDemonsRegistrationFilter.h  itkLogDomainDemonsRegistrationFilter.hxx  itkMultiResolutionLogDomainDeformableRegistration.h  itkMultiResolutionLogDomainDeformableRegistration.hxx  itkSymmetricLogDomainDemonsRegistrationFilter.h  itkSymmetricLogDomainDemonsRegistrationFilter.hxx  itkTransformToVelocityFieldSource.h  itkTransformToVelocityFieldSource.hxx  itkVectorRegularizationFilter.h  itkVectorRegularizationFilter.txx  itkVelocityFieldBCHCompositionFilter.h  itkVelocityFieldBCHCompositionFilter.hxx  itkVelocityFieldExponentialComposedWithDisplacementFieldFilter.h  itkVelocityFieldExponentialComposedWithDisplacementFieldFilter.hxx  itkVelocityFieldLieBracketFilter.h  itkVelocityFieldLieBracketFilter.hxx
src/RegistrationProgrammingInterface/: CMakeLists.txt  itkDisplacementFieldTransform.h  itkDisplacementFieldTransform.txx  itkFixedPointInverseDeformationFieldImageFilter.h  itkFixedPointInverseDeformationFieldImageFilter.txx  itkGeneralTransform.txx  itkStationaryVelocityFieldExponential.h  itkStationaryVelocityFieldExponential.txx  itkStationaryVelocityFieldTransform.h  itkStationaryVelocityFieldTransform.txx  rpiCommonTools.cxx  rpiCommonTools.hxx  rpiConvertLinearToDF.cxx  rpiConvertLinearToSVF.cxx  rpiFuseTransformations.cxx  rpiObserver.cxx  rpiObserver.hxx  rpiRegistrationMethod.cxx  rpiRegistrationMethod.hxx  rpiResampleImage.cxx
src/SVFLogJacobian/: CMakeLists.txt  SVFLogJacobian.cxx
src/medInriaPlugin/: CMakeLists.txt  LCCLogDemons.cpp  LCCLogDemons.h  LCCLogDemonsPlugin.cpp  LCCLogDemonsPlugin.h  LCCLogDemonsToolBox.cpp  LCCLogDemonsToolBox.h
