PROJECT(SVFLogJacobian)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/
	)

ADD_LIBRARY(           libSVFLogJacobian SVFLogJacobian.cxx )
TARGET_LINK_LIBRARIES ( libSVFLogJacobian ${Libraries} )
SET_TARGET_PROPERTIES ( libSVFLogJacobian PROPERTIES OUTPUT_NAME
	"LIBSVFLogJacobian" )

ADD_EXECUTABLE(exeSVFLogJacobian SVFLogJacobian.cxx )
TARGET_LINK_LIBRARIES(exeSVFLogJacobian ${ITK_LIBRARIES} )
SET_TARGET_PROPERTIES ( exeSVFLogJacobian PROPERTIES OUTPUT_NAME "SVFLogJacobian" )


INSTALL( TARGETS libSVFLogJacobian  exeSVFLogJacobian  
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib/static)
